--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,4 +1,61 @@
 .header{
-    background-color: $color-grey-dark-2;
     grid-column: full-start/col-end 6;
+    padding: 4rem 8rem 4rem 8rem;
+    background-image: linear-gradient(rgba($color-secondary,0.93), rgba($color-secondary,0.93)) , url("../img/hero.jpeg");
+    background-size: cover;
+    background-position: center;
+
+    display: grid;
+    grid-template-rows: 1fr min-content min-content 1fr;
+    grid-gap: 1.5rem;
+    grid-template-columns: minmax(min-content,max-content);
+
+    @media only screen and (max-width: $bp-800){
+        grid-column: 1/-1;
+    }
+
+    &__logo{
+        height: 3rem;
+        justify-self: center;
+    }
+
+    &__btn{
+        align-self: start;
+        justify-self: start;
+    }
+
+    &__seen{
+        font-size: 1.5rem;
+        color: $color-grey-light-1;
+        display: grid;
+        grid-template-columns: 1fr 5.5rem 1fr;
+        grid-gap: 1rem;
+        align-items: center;
+
+        &::after,
+        &::before{
+            content: '';
+            height: 1px;
+            background-color: $color-grey-light-1;
+        }
+    }
+
+    &__seen-logo{
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        justify-items: center;
+        align-items: center;
+        padding-top: 1rem;
+        img{
+            max-height: 2.5rem;
+            max-width: 100%;
+            filter: brightness(70%);
+
+            @media only screen and (max-width: $bp-600){
+                max-height: 2rem;
+                max-width: 100%;
+            }
+        }
+    }
+
 }
