--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -5,6 +5,9 @@
 
 .heading-1{
     @extend %heading;
+    font-size: 4rem;
+    color: $color-grey-light-1;
+    line-height: 1.1;
 }
 
 .heading-2{
@@ -21,6 +24,7 @@
    @extend %heading;
     text-transform: uppercase;
     font-size:2rem;
+    color: $color-grey-light-1;
 
     &--light{color:$color-primary;}
     &--dark{}
