--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,4 +1,35 @@
 .footer{
     background-color: $color-secondary;
     grid-column: full-start/full-end;
+
+    &__paragraph{
+        color: $color-grey-light-1;
+        font-size: 1.4rem;
+        text-align: center;
+        margin-bottom: 4rem;
+    }
 }
+
+.nav{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
+    
+    margin: 5rem auto;
+    width: 80%;
+
+    &__list{
+        list-style: none;
+        font-size: 1.6rem;
+        color: #fff;
+        text-transform: uppercase;
+        padding:1rem 2rem;
+
+        &:hover{
+            background-color:rgba(#fff,0.2);
+        }
+    }
+
+}
+
