--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -8,24 +8,42 @@
                           rgba($color-primary,.5),
                           rgba($color-primary,.5)), 
                           url(../img/back.jpg);
+                          background-size: cover;
 
         display: grid;
         grid-template-rows: repeat(6,1fr);
         grid-template-columns: repeat(6,1fr);
         align-items:center;
+
+        @media only screen and (max-width: $bp-800){
+            grid-column: 1/-1;
+        }
     }
 
      &__img-1{
         width:100%;
         grid-row: 2/ 6;
         grid-column: 2/ 6;
+
+        @media only screen and (max-width: $bp-800){
+            padding: 6rem;
+            grid-row: 1/ -1;
+            grid-column: 1/ 5;
         }
+    }
 
     &__img-2{
         width:115%;
         grid-row: 4/6;
         grid-column: 4/7;
         z-index:10;
+
+        @media only screen and (max-width: $bp-800){
+            grid-row: 3/5;
+            padding: 5rem;
+            align-self: center;
+            transform: translateX(-4rem);
+        }
     }
    
 
@@ -38,6 +56,11 @@
         display:grid;
         justify-items:start;
         align-content: center;
+
+        @media only screen and (max-width: $bp-800){
+            grid-column: 1/-1;
+            grid-row: 5/6;
+        }
         
     }
 }
